feat: complete exchange rate module
